Task_5/Part_3/fe-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
  namespace: fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: shehabfahmy/my-nginx
        ports:
          - containerPort: 80
        volumeMounts:
          - name: web-content
            mountPath: /usr/share/nginx/html
      volumes:
        - name: web-content
          emptyDir: {}
