Task_5/Part_3/fe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: fe
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
