Task_5/Part_3/mongo-express-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongo-express
spec:
  selector:
    app: mongo-express
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
