Task_5/Part_3/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongo-db
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
